# em-evo-evals

./: .env.example  .gitignore  README.md  batch_judge_two_pass.py  debug_judge_api.py  generator.py  judge.py  judge_reference.py  pyproject.toml  run_batch_evals.py  run_evals.py  run_evals_reference.py  scorer.py  test_judge_infrastructure.py  test_judge_reference_infrastructure.py  utils_parser.py
results/generations/: test.jsonl
results/judgments/: test_judged.jsonl
results/metrics/: test_metrics.csv
